<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:background="@drawable/classroom"
    android:gravity="clip_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/question"
        android:textStyle="bold|italic"
        android:textSize="60sp"
        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
        android:background="@drawable/blackboard"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_below="@+id/back" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/question"
        android:layout_alignParentEnd="true"
        android:progressBackgroundTint="@color/abc_primary_text_disable_only_material_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="@drawable/back"
        android:text="@string/back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:background="@drawable/next"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/question"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/next"
        android:layout_alignParentEnd="true">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:background="#c3666666">

                <RadioButton
                    android:layout_width="275dp"
                    android:layout_height="70dp"
                    android:text="@string/answer"
                    android:id="@+id/option1"
                    android:background="#90f9f9f9"
                    android:checked="false"
                    android:clickable="true"
                    android:enabled="true" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:background="@android:drawable/ic_media_play"
                    android:contentDescription="@string/playbutton"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1.71" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:background="#c3666666">

                <RadioButton
                    android:layout_width="275dp"
                    android:layout_height="70dp"
                    android:text="@string/answer"
                    android:id="@+id/option2"
                    android:background="#97ffffff"
                    android:checked="false"
                    android:enabled="true"
                    android:clickable="true" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:background="@android:drawable/ic_media_play"
                    android:contentDescription="@string/playbutton"
                    android:layout_below="@+id/question"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1.71" />

            </TableRow>
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@android:drawable/ic_media_play"
        android:contentDescription="@string/playbutton"
        android:layout_weight="1.71"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="false" />

</RelativeLayout>
