<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:background="@drawable/classroom"
    android:gravity="clip_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flashcard_sightword"
        android:id="@+id/textView"
        android:textStyle="bold|italic"
        android:textSize="60sp"
        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
        android:background="@drawable/blackboard"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff"
        android:gravity="center" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentEnd="true"
        android:progressBackgroundTint="@color/abc_primary_text_disable_only_material_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="@drawable/back"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:text="@string/back" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:background="@drawable/next"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:text="@string/next" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_marginStart="130dp"
        android:layout_alignTop="@+id/progressBar"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/next" />

</RelativeLayout>
