<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:gravity="clip_horizontal"
    android:background="@drawable/classroom">
<!--    android:id="@+id/" -->
    android:textAlignment="center"
    android:background="@drawable/classroom">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applywords"
        android:id="@+id/applywords"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:layout_alignBottom="@+id/edit"
        android:layout_alignParentStart="true"
        android:background="@drawable/back" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/inputwords_title"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:autoText="false"
        android:backgroundTint="#ff2fffa7" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/editText"
        android:layout_marginTop="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit"
        android:layout_above="@+id/applywords">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText2"
                    android:textIsSelectable="true"
                    android:inputType="none"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textColorHint="#ffffffff"
                    android:textStyle="bold|normal|italic"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText3"
                    android:textIsSelectable="true"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox2"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText4"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox3"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText5"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox4"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText6"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox5"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText7"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox6"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText8"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox7"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText9"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox8"
                    android:gravity="center|top"
                    android:checked="false"
                    android:background="#ad9befff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="313dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText10"
                    android:background="#bc2e2e2e"
                    android:hint="@string/inputwords_hint"
                    android:textStyle="bold|normal|italic"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox9"
                    android:checked="false"
                    android:clickable="false"
                    android:gravity="center|top"
                    android:background="#ad9befff" />
            </TableRow>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
